oc2mangoLib/cal.output
Terminals unused in grammar

   level3
   level2
   level1
   ENDIF
   IFDEF
   IFNDEF
   UNDEF
   _goto
   _enum
   _struct
   CLASS_DECLARE
   RIP
   _YES
   _NO
   _SEL


State 24 conflicts: 4 reduce/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 99 conflicts: 2 shift/reduce
State 111 conflicts: 2 shift/reduce
State 113 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 2 shift/reduce
State 133 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce
State 135 conflicts: 2 shift/reduce
State 136 conflicts: 2 shift/reduce
State 158 conflicts: 6 shift/reduce
State 257 conflicts: 1 shift/reduce
State 296 conflicts: 2 shift/reduce


Grammar

    0 $accept: compile_util $end

    1 compile_util: %empty
    2             | definition_list

    3 definition_list: definition
    4                | definition_list definition

    5 definition: PS_Define
    6           | class_declare
    7           | class_implementation
    8           | expression_statement
    9           | control_statement
   10           | type_specified IDENTIFIER LP func_declare_parameters RP SEMICOLON
   11           | type_specified IDENTIFIER LP func_declare_parameters RP LC function_implementation RC

   12 PS_Define: PS includeHeader

   13 includeHeader: IMPORT
   14              | INCLUDE
   15              | includeHeader LT IDENTIFIER DIV IDENTIFIER DOT IDENTIFIER GT
   16              | includeHeader STRING_LITERAL

   17 class_declare: INTERFACE IDENTIFIER COLON IDENTIFIER
   18              | INTERFACE IDENTIFIER LP IDENTIFIER RP
   19              | INTERFACE IDENTIFIER LP RP
   20              | class_declare LT protocol_list GT
   21              | class_declare LC class_private_varibale_declare RC
   22              | class_declare PROPERTY class_property_declare declare_variable SEMICOLON
   23              | class_declare method_declare SEMICOLON
   24              | class_declare END

   25 class_implementation: IMPLEMENTATION IDENTIFIER
   26                     | IMPLEMENTATION IDENTIFIER LP IDENTIFIER RP
   27                     | class_implementation LC class_private_varibale_declare RC
   28                     | class_implementation method_declare LC function_implementation RC
   29                     | class_implementation END

   30 protocol_list: IDENTIFIER
   31              | protocol_list COMMA IDENTIFIER

   32 class_private_varibale_declare: %empty
   33                               | class_private_varibale_declare declare_variable SEMICOLON

   34 class_property_type: ASSIGN_MEM
   35                    | WEAK
   36                    | STRONG
   37                    | COPY
   38                    | NONATOMIC
   39                    | ATOMIC
   40                    | READONLY
   41                    | READWRITE
   42                    | NONNULL
   43                    | NULLABLE

   44 class_property_declare: %empty
   45                       | LP
   46                       | class_property_declare class_property_type COMMA
   47                       | class_property_declare class_property_type RP

   48 declare_variable: type_specified IDENTIFIER
   49                 | type_specified LP POWER IDENTIFIER RP LP func_declare_parameters RP

   50 type_specified: declare_left_attribute type_specified
   51               | type_specified LT type_specified GT
   52               | type_specified declare_right_attribute
   53               | _typeof LP expression RP
   54               | _UCHAR
   55               | _USHORT
   56               | _UINT
   57               | _ULONG
   58               | _ULLONG
   59               | _CHAR
   60               | _SHORT
   61               | _INT
   62               | _LONG
   63               | _LLONG
   64               | _DOUBLE
   65               | _FLOAT
   66               | _Class
   67               | _BOOL
   68               | _void
   69               | _instancetype
   70               | IDENTIFIER
   71               | _id
   72               | block_type
   73               | type_specified ASTERISK

   74 declare_left_attribute: EXTERN
   75                       | STATIC
   76                       | CONST
   77                       | NONNULL
   78                       | NULLABLE
   79                       | _STRONG
   80                       | _WEAK
   81                       | _BLOCK
   82                       | _BRIDGE

   83 declare_right_attribute: _NONNULL
   84                        | _NULLABLE
   85                        | CONST

   86 block_type: type_specified LP POWER RP
   87           | block_type LP func_declare_parameters RP

   88 block_parametere_type: declare_variable
   89                      | type_specified

   90 func_declare_parameters: %empty
   91                        | block_parametere_type
   92                        | func_declare_parameters COMMA block_parametere_type

   93 method_declare: SUB LP type_specified RP
   94               | ADD LP type_specified RP
   95               | method_declare IDENTIFIER
   96               | method_declare IDENTIFIER COLON LP type_specified RP IDENTIFIER

   97 objc_method_call_pramameters: IDENTIFIER
   98                             | IDENTIFIER COLON expression_list
   99                             | objc_method_call_pramameters IDENTIFIER COLON expression_list

  100 objc_method_call: LB primary_expression objc_method_call_pramameters RB

  101 block_implementation: POWER type_specified LC function_implementation RC
  102                     | POWER type_specified LP func_declare_parameters RP LC function_implementation RC
  103                     | POWER LC function_implementation RC
  104                     | POWER LP func_declare_parameters RP LC function_implementation RC

  105 declare_expression: declare_variable
  106                   | declare_variable ASSIGN expression

  107 expression: ternary_expression

  108 expression_statement: assign_expression SEMICOLON
  109                     | declare_expression SEMICOLON
  110                     | _return SEMICOLON
  111                     | _return expression SEMICOLON
  112                     | _break SEMICOLON
  113                     | _continue SEMICOLON

  114 if_statement: IF LP expression RP LC function_implementation RC
  115             | if_statement _else IF LP expression RP LC function_implementation RC
  116             | if_statement _else LC function_implementation RC

  117 dowhile_statement: _do LC function_implementation RC _while LP expression RP

  118 while_statement: _while LP expression RP LC function_implementation RC

  119 case_statement: _case primary_expression COLON
  120               | _default COLON
  121               | case_statement LC function_implementation RC

  122 switch_statement: _switch LP expression RP LC
  123                 | switch_statement case_statement
  124                 | switch_statement RC

  125 for_parameter_list: expression
  126                   | for_parameter_list SEMICOLON expression

  127 for_statement: _for LP for_parameter_list RP LC function_implementation RC

  128 forin_statement: _for LP declare_variable _in expression RP LC function_implementation RC

  129 control_statement: if_statement
  130                  | switch_statement
  131                  | while_statement
  132                  | dowhile_statement
  133                  | for_statement
  134                  | forin_statement

  135 function_implementation: %empty
  136                        | function_implementation expression_statement
  137                        | function_implementation control_statement

  138 expression_list: expression
  139                | expression_list COMMA expression

  140 assign_operator: ASSIGN
  141                | AND_ASSIGN
  142                | OR_ASSIGN
  143                | POWER_ASSIGN
  144                | ADD_ASSIGN
  145                | SUB_ASSIGN
  146                | DIV_ASSIGN
  147                | ASTERISK_ASSIGN
  148                | MOD_ASSIGN

  149 assign_expression: ternary_expression
  150                  | primary_expression assign_operator ternary_expression

  151 ternary_expression: logic_or_expression
  152                   | logic_or_expression QUESTION ternary_expression COLON ternary_expression
  153                   | logic_or_expression QUESTION COLON ternary_expression

  154 logic_or_expression: logic_and_expression
  155                    | logic_or_expression LOGIC_OR logic_or_expression

  156 logic_and_expression: bite_or_expression
  157                     | logic_and_expression LOGIC_AND bite_or_expression

  158 bite_or_expression: bite_xor_expression
  159                   | bite_or_expression OR bite_xor_expression

  160 bite_xor_expression: bite_and_expression
  161                    | bite_xor_expression POWER bite_and_expression

  162 bite_and_expression: equality_expression
  163                    | bite_and_expression AND equality_expression

  164 equality_expression: relational_expression
  165                    | equality_expression EQ relational_expression
  166                    | equality_expression NE relational_expression

  167 relational_expression: bite_shift_expression
  168                      | relational_expression LT bite_shift_expression
  169                      | relational_expression LE bite_shift_expression
  170                      | relational_expression GT bite_shift_expression
  171                      | relational_expression GE bite_shift_expression

  172 bite_shift_expression: additive_expression
  173                      | bite_shift_expression SHIFTLEFT additive_expression
  174                      | bite_shift_expression SHIFTRIGHT additive_expression

  175 additive_expression: multiplication_expression
  176                    | additive_expression ADD multiplication_expression
  177                    | additive_expression SUB multiplication_expression

  178 multiplication_expression: unary_expression
  179                          | multiplication_expression ASTERISK unary_expression
  180                          | multiplication_expression DIV unary_expression
  181                          | multiplication_expression MOD unary_expression

  182 unary_expression: primary_expression
  183                 | NOT unary_expression
  184                 | SUB unary_expression
  185                 | ASTERISK unary_expression
  186                 | AND unary_expression
  187                 | TILDE unary_expression
  188                 | _sizeof unary_expression
  189                 | LP type_specified RP unary_expression
  190                 | unary_expression INCREMENT
  191                 | unary_expression DECREMENT
  192                 | INCREMENT unary_expression
  193                 | DECREMENT unary_expression

  194 numerical_value_type: INTETER_LITERAL
  195                     | DOUBLE_LITERAL

  196 dict_entry: assign_expression COLON assign_expression
  197           | dict_entry COMMA assign_expression COLON assign_expression

  198 primary_expression: IDENTIFIER
  199                   | _self
  200                   | _super
  201                   | objc_method_call
  202                   | primary_expression DOT IDENTIFIER
  203                   | primary_expression POINT IDENTIFIER
  204                   | primary_expression LP expression_list RP
  205                   | LP expression RP
  206                   | AT LC dict_entry RC
  207                   | AT LB expression_list RB
  208                   | AT LP expression RP
  209                   | AT numerical_value_type
  210                   | AT STRING_LITERAL
  211                   | SELECTOR
  212                   | PROTOCOL LP IDENTIFIER RP
  213                   | STRING_LITERAL
  214                   | block_implementation
  215                   | numerical_value_type
  216                   | _nil
  217                   | _NULL


Terminals, with rules where they appear

$end (0) 0
error (256)
level3 (258)
level2 (259)
level1 (260)
IF <identifier> (261) 114 115
ENDIF <identifier> (262)
IFDEF <identifier> (263)
IFNDEF <identifier> (264)
UNDEF <identifier> (265)
IMPORT <identifier> (266) 13
INCLUDE <identifier> (267) 14
TILDE <identifier> (268) 187
QUESTION <identifier> (269) 152 153
_return <identifier> (270) 110 111
_break <identifier> (271) 112
_continue <identifier> (272) 113
_goto <identifier> (273)
_else <identifier> (274) 115 116
_while <identifier> (275) 117 118
_do <identifier> (276) 117
_in <identifier> (277) 128
_for <identifier> (278) 127 128
_case <identifier> (279) 119
_switch <identifier> (280) 122
_default <identifier> (281) 120
_enum <identifier> (282)
_typeof <identifier> (283) 53
_struct <identifier> (284)
_sizeof <identifier> (285) 188
INTERFACE <identifier> (286) 17 18 19
IMPLEMENTATION <identifier> (287) 25 26
PROTOCOL <identifier> (288) 212
END <identifier> (289) 24 29
CLASS_DECLARE <identifier> (290)
PROPERTY <identifier> (291) 22
WEAK <identifier> (292) 35
STRONG <identifier> (293) 36
COPY <identifier> (294) 37
ASSIGN_MEM <identifier> (295) 34
NONATOMIC <identifier> (296) 38
ATOMIC <identifier> (297) 39
READONLY <identifier> (298) 40
READWRITE <identifier> (299) 41
NONNULL <identifier> (300) 42 77
NULLABLE <identifier> (301) 43 78
EXTERN <identifier> (302) 74
STATIC <identifier> (303) 75
CONST <identifier> (304) 76 85
_NONNULL <identifier> (305) 83
_NULLABLE <identifier> (306) 84
_STRONG <identifier> (307) 79
_WEAK <identifier> (308) 80
_BLOCK <identifier> (309) 81
_BRIDGE <identifier> (310) 82
IDENTIFIER <identifier> (311) 10 11 15 17 18 19 25 26 30 31 48 49 70
    95 96 97 98 99 198 202 203 212
STRING_LITERAL <identifier> (312) 16 210 213
COMMA <identifier> (313) 31 46 92 139 197
COLON <identifier> (314) 17 96 98 99 119 120 152 153 196 197
SEMICOLON <identifier> (315) 10 22 23 33 108 109 110 111 112 113 126
LP <identifier> (316) 10 11 18 19 26 45 49 53 86 87 93 94 96 102 104
    114 115 117 118 122 127 128 189 204 205 208 212
RP <identifier> (317) 10 11 18 19 26 47 49 53 86 87 93 94 96 102 104
    114 115 117 118 122 127 128 189 204 205 208 212
RIP <identifier> (318)
LB <identifier> (319) 100 207
RB <identifier> (320) 100 207
LC <identifier> (321) 11 21 27 28 101 102 103 104 114 115 116 117 118
    121 122 127 128 206
RC <identifier> (322) 11 21 27 28 101 102 103 104 114 115 116 117 118
    121 124 127 128 206
DOT <identifier> (323) 15 202
AT <identifier> (324) 206 207 208 209 210
PS <identifier> (325) 12
POINT <identifier> (326) 203
EQ <identifier> (327) 165
NE <identifier> (328) 166
LT <identifier> (329) 15 20 51 168
LE <identifier> (330) 169
GT <identifier> (331) 15 20 51 170
GE <identifier> (332) 171
LOGIC_AND <identifier> (333) 157
LOGIC_OR <identifier> (334) 155
NOT <identifier> (335) 183
AND <identifier> (336) 163 186
OR <identifier> (337) 159
POWER <identifier> (338) 49 86 101 102 103 104 161
SUB <identifier> (339) 93 177 184
ADD <identifier> (340) 94 176
DIV <identifier> (341) 15 180
ASTERISK <identifier> (342) 73 179 185
AND_ASSIGN <identifier> (343) 141
OR_ASSIGN <identifier> (344) 142
POWER_ASSIGN <identifier> (345) 143
SUB_ASSIGN <identifier> (346) 145
ADD_ASSIGN <identifier> (347) 144
DIV_ASSIGN <identifier> (348) 146
ASTERISK_ASSIGN <identifier> (349) 147
INCREMENT <identifier> (350) 190 192
DECREMENT <identifier> (351) 191 193
SHIFTLEFT <identifier> (352) 173
SHIFTRIGHT <identifier> (353) 174
MOD <identifier> (354) 181
ASSIGN <identifier> (355) 106 140
MOD_ASSIGN <identifier> (356) 148
_self <identifier> (357) 199
_super <identifier> (358) 200
_nil <identifier> (359) 216
_NULL <identifier> (360) 217
_YES <identifier> (361)
_NO <identifier> (362)
_Class <identifier> (363) 66
_id <identifier> (364) 71
_void <identifier> (365) 68
_BOOL <identifier> (366) 67
_SEL <identifier> (367)
_CHAR <identifier> (368) 59
_SHORT <identifier> (369) 60
_INT <identifier> (370) 61
_LONG <identifier> (371) 62
_LLONG <identifier> (372) 63
_UCHAR <identifier> (373) 54
_USHORT <identifier> (374) 55
_UINT <identifier> (375) 56
_ULONG <identifier> (376) 57
_ULLONG <identifier> (377) 58
_DOUBLE <identifier> (378) 64
_FLOAT <identifier> (379) 65
_instancetype <identifier> (380) 69
INTETER_LITERAL <identifier> (381) 194
DOUBLE_LITERAL <identifier> (382) 195
SELECTOR <identifier> (383) 211


Nonterminals, with rules where they appear

$accept (129)
    on left: 0
compile_util (130)
    on left: 1 2, on right: 0
definition_list (131)
    on left: 3 4, on right: 2 4
definition (132)
    on left: 5 6 7 8 9 10 11, on right: 3 4
PS_Define <include> (133)
    on left: 12, on right: 5
includeHeader <include> (134)
    on left: 13 14 15 16, on right: 12 15 16
class_declare <declare> (135)
    on left: 17 18 19 20 21 22 23 24, on right: 6 20 21 22 23 24
class_implementation <implementation> (136)
    on left: 25 26 27 28 29, on right: 7 27 28 29
protocol_list <declare> (137)
    on left: 30 31, on right: 20 31
class_private_varibale_declare <declare> (138)
    on left: 32 33, on right: 21 27 33
class_property_type <identifier> (139)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 46 47
class_property_declare <declare> (140)
    on left: 44 45 46 47, on right: 22 46 47
declare_variable <declare> (141)
    on left: 48 49, on right: 22 33 88 105 106 128
type_specified <expression> (142)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73, on right: 10 11 48 49 50 51 52 73 86 89 93 94
    96 101 102 189
declare_left_attribute <identifier> (143)
    on left: 74 75 76 77 78 79 80 81 82, on right: 50
declare_right_attribute <identifier> (144)
    on left: 83 84 85, on right: 52
block_type <expression> (145)
    on left: 86 87, on right: 72 87
block_parametere_type <expression> (146)
    on left: 88 89, on right: 91 92
func_declare_parameters <declare> (147)
    on left: 90 91 92, on right: 10 11 49 87 92 102 104
method_declare <declare> (148)
    on left: 93 94 95 96, on right: 23 28 95 96
objc_method_call_pramameters <expression> (149)
    on left: 97 98 99, on right: 99 100
objc_method_call <expression> (150)
    on left: 100, on right: 201
block_implementation <expression> (151)
    on left: 101 102 103 104, on right: 214
declare_expression <expression> (152)
    on left: 105 106, on right: 109
expression <expression> (153)
    on left: 107, on right: 53 106 111 114 115 117 118 122 125 126
    128 138 139 205 208
expression_statement <statement> (154)
    on left: 108 109 110 111 112 113, on right: 8 136
if_statement <statement> (155)
    on left: 114 115 116, on right: 115 116 129
dowhile_statement <statement> (156)
    on left: 117, on right: 132
while_statement <statement> (157)
    on left: 118, on right: 131
case_statement <statement> (158)
    on left: 119 120 121, on right: 121 123
switch_statement <statement> (159)
    on left: 122 123 124, on right: 123 124 130
for_parameter_list <expression> (160)
    on left: 125 126, on right: 126 127
for_statement <statement> (161)
    on left: 127, on right: 133
forin_statement <statement> (162)
    on left: 128, on right: 134
control_statement <statement> (163)
    on left: 129 130 131 132 133 134, on right: 9 137
function_implementation <expression> (164)
    on left: 135 136 137, on right: 11 28 101 102 103 104 114 115 116
    117 118 121 127 128 136 137
expression_list <expression> (165)
    on left: 138 139, on right: 98 99 139 204 207
assign_operator <Operator> (166)
    on left: 140 141 142 143 144 145 146 147 148, on right: 150
assign_expression <expression> (167)
    on left: 149 150, on right: 108 196 197
ternary_expression <expression> (168)
    on left: 151 152 153, on right: 107 149 150 152 153
logic_or_expression <expression> (169)
    on left: 154 155, on right: 151 152 153 155
logic_and_expression <expression> (170)
    on left: 156 157, on right: 154 157
bite_or_expression <expression> (171)
    on left: 158 159, on right: 156 157 159
bite_xor_expression <expression> (172)
    on left: 160 161, on right: 158 159 161
bite_and_expression <expression> (173)
    on left: 162 163, on right: 160 161 163
equality_expression <expression> (174)
    on left: 164 165 166, on right: 162 163 165 166
relational_expression <expression> (175)
    on left: 167 168 169 170 171, on right: 164 165 166 168 169 170
    171
bite_shift_expression <expression> (176)
    on left: 172 173 174, on right: 167 168 169 170 171 173 174
additive_expression <expression> (177)
    on left: 175 176 177, on right: 172 173 174 176 177
multiplication_expression <expression> (178)
    on left: 178 179 180 181, on right: 175 176 177 179 180 181
unary_expression <expression> (179)
    on left: 182 183 184 185 186 187 188 189 190 191 192 193, on right:
    178 179 180 181 183 184 185 186 187 188 189 190 191 192 193
numerical_value_type <expression> (180)
    on left: 194 195, on right: 209 215
dict_entry <expression> (181)
    on left: 196 197, on right: 197 206
primary_expression <expression> (182)
    on left: 198 199 200 201 202 203 204 205 206 207 208 209 210 211
    212 213 214 215 216 217, on right: 100 119 150 182 202 203 204


State 0

    0 $accept: . compile_util $end

    IF               shift, and go to state 1
    TILDE            shift, and go to state 2
    _return          shift, and go to state 3
    _break           shift, and go to state 4
    _continue        shift, and go to state 5
    _while           shift, and go to state 6
    _do              shift, and go to state 7
    _for             shift, and go to state 8
    _switch          shift, and go to state 9
    _typeof          shift, and go to state 10
    _sizeof          shift, and go to state 11
    INTERFACE        shift, and go to state 12
    IMPLEMENTATION   shift, and go to state 13
    PROTOCOL         shift, and go to state 14
    NONNULL          shift, and go to state 15
    NULLABLE         shift, and go to state 16
    EXTERN           shift, and go to state 17
    STATIC           shift, and go to state 18
    CONST            shift, and go to state 19
    _STRONG          shift, and go to state 20
    _WEAK            shift, and go to state 21
    _BLOCK           shift, and go to state 22
    _BRIDGE          shift, and go to state 23
    IDENTIFIER       shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    LP               shift, and go to state 26
    LB               shift, and go to state 27
    AT               shift, and go to state 28
    PS               shift, and go to state 29
    NOT              shift, and go to state 30
    AND              shift, and go to state 31
    POWER            shift, and go to state 32
    SUB              shift, and go to state 33
    ASTERISK         shift, and go to state 34
    INCREMENT        shift, and go to state 35
    DECREMENT        shift, and go to state 36
    _self            shift, and go to state 37
    _super           shift, and go to state 38
    _nil             shift, and go to state 39
    _NULL            shift, and go to state 40
    _Class           shift, and go to state 41
    _id              shift, and go to state 42
    _void            shift, and go to state 43
    _BOOL            shift, and go to state 44
    _CHAR            shift, and go to state 45
    _SHORT           shift, and go to state 46
    _INT             shift, and go to state 47
    _LONG            shift, and go to state 48
    _LLONG           shift, and go to state 49
    _UCHAR           shift, and go to state 50
    _USHORT          shift, and go to state 51
    _UINT            shift, and go to state 52
    _ULONG           shift, and go to state 53
    _ULLONG          shift, and go to state 54
    _DOUBLE          shift, and go to state 55
    _FLOAT           shift, and go to state 56
    _instancetype    shift, and go to state 57
    INTETER_LITERAL  shift, and go to state 58
    DOUBLE_LITERAL   shift, and go to state 59
    SELECTOR         shift, and go to state 60

    $default  reduce using rule 1 (compile_util)

    compile_util               go to state 61
    definition_list            go to state 62
    definition                 go to state 63
    PS_Define                  go to state 64
    class_declare              go to state 65
    class_implementation       go to state 66
    declare_variable           go to state 67
    type_specified             go to state 68
    declare_left_attribute     go to state 69
    block_type                 go to state 70
    objc_method_call           go to state 71
    block_implementation       go to state 72
    declare_expression         go to state 73
    expression_statement       go to state 74
    if_statement               go to state 75
    dowhile_statement          go to state 76
    while_statement            go to state 77
    switch_statement           go to state 78
    for_statement              go to state 79
    forin_statement            go to state 80
    control_statement          go to state 81
    assign_expression          go to state 82
    ternary_expression         go to state 83
    logic_or_expression        go to state 84
    logic_and_expression       go to state 85
    bite_or_expression         go to state 86
    bite_xor_expression        go to state 87
    bite_and_expression        go to state 88
    equality_expression        go to state 89
    relational_expression      go to state 90
    bite_shift_expression      go to state 91
    additive_expression        go to state 92
    multiplication_expression  go to state 93
    unary_expression           go to state 94
    numerical_value_type       go to state 95
    primary_expression         go to state 96


State 1

  114 if_statement: IF . LP expression RP LC function_implementation RC

    LP  shift, and go to state 97


State 2

  187 unary_expression: TILDE . unary_expression

    TILDE            shift, and go to state 2
    _sizeof          shift, and go to state 11
    PROTOCOL         shift, and go to state 14
    IDENTIFIER       shift, and go to state 98
    STRING_LITERAL   shift, and go to state 25
    LP               shift, and go to state 26
    LB               shift, and go to state 27
    AT               shift, and go to state 28
    NOT              shift, and go to state 30
    AND              shift, and go to state 31
    POWER            shift, and go to state 32
    SUB              shift, and go to state 33
    ASTERISK         shift, and go to state 34
    INCREMENT        shift, and go to state 35
    DECREMENT        shift, and go to state 36
    _self            shift, and go to state 37
    _super           shift, and go to state 38
    _nil             shift, and go to state 39
    _NULL            shift, and go to state 40
    INTETER_LITERAL  shift, and go to state 58
    DOUBLE_LITERAL   shift, and go to state 59
    SELECTOR         shift, and go to state 60

    objc_method_call      go to state 71
    block_implementation  go to state 72
    unary_expression      go to state 99
    numerical_value_type  go to state 95
    primary_expression    go to state 100


State 3

  110 expression_statement: _return . SEMICOLON
  111                     | _return . expression SEMICOLON

    TILDE            shift, and go to state 2
    _sizeof          shift, and go to state 11
    PROTOCOL         shift, and go to state 14
    IDENTIFIER       shift, and go to state 98
    STRING_LITERAL   shift, and go to state 25
    SEMICOLON        shift, and go to state 101
    LP               shift, and go to state 26
    LB               shift, and go to state 27
    AT               shift, and go to state 28
    NOT              shift, and go to state 30
    AND              shift, and go to state 31
    POWER            shift, and go to state 32
    SUB              shift, and go to state 33
    ASTERISK         shift, and go to state 34
    INCREMENT        shift, and go to state 35
    DECREMENT        shift, and go to state 36
    _self            shift, and go to state 37
    _super           shift, and go to state 38
    _nil             shift, and go to state 39
    _NULL            shift, and go to state 40
    INTETER_LITERAL  shift, and go to state 58
    DOUBLE_LITERAL   shift, and go to state 59
    SELECTOR         shift, and go to state 60

    objc_method_call           go to state 71
    block_implementation       go to state 72
    expression                 go to state 102
    ternary_expression         go to state 103
    logic_or_expression        go to state 84
    logic_and_expression       go to state 85
    bite_or_expression         go to state 86
    bite_xor_expression        go to state 87
    bite_and_expression        go to state 88
    equality_expression        go to state 89
    relational_expression      go to state 90
    bite_shift_expression      go to state 91
    additive_expression        go to state 92
    multiplication_expression  go to state 93
    unary_expression           go to state 94
    numerical_value_type       go to state 95
    primary_expression         go to state 100


State 4

  112 expression_statement: _break . SEMICOLON

    SEMICOLON  shift, and go to state 104


State 5

  113 expression_statement: _continue . SEMICOLON

    SEMICOLON  shift, and go to state 105


State 6

  118 while_statement: _while . LP expression RP LC function_implementation RC

    LP  shift, and go to state 106


State 7

  117 dowhile_statement: _do . LC function_implementation RC _while LP expression RP

    LC  shift, and go to state 107


State 8

  127 for_statement: _for . LP for_parameter_list RP LC function_implementation RC
  128 forin_statement: _for . LP declare_variable _in expression RP LC function_implementation RC

    LP  shift, and go to state 108


State 9

  122 switch_statement: _switch . LP expression RP LC

    LP  shift, and go to state 109


State 10

   53 type_specified: _typeof . LP expression RP

    LP  shift, and go to state 110


State 11

  188 unary_expression: _sizeof . unary_expression

    TILDE            shift, and go to state 2
    _sizeof          shift, and go to state 11
    PROTOCOL         shift, and go to state 14
    IDENTIFIER       shift, and go to state 98
    STRING_LITERAL   shift, and go to state 25
    LP               shift, and go to state 26
    LB               shift, and go to state 27
    AT               shift, and go to state 28
    NOT              shift, and go to state 30
    AND              shift, and go to state 31
    POWER            shift, and go to state 32
    SUB              shift, and go to state 33
    ASTERISK         shift, and go to state 34
    INCREMENT        shift, and go to state 35
    DECREMENT        shift, and go to state 36
    _self            shift, and go to state 37
    _super           shift, and go to state 38
    _nil             shift, and go to state 39
    _NULL            shift, and go to state 40
    INTETER_LITERAL  shift, and go to state 58
    DOUBLE_LITERAL   shift, and go to state 59
    SELECTOR         shift, and go to state 60

    objc_method_call      go to state 71
    block_implementation  go to state 72
    unary_expression      go to state 111
    numerical_value_type  go to state 95
    primary_expression    go to state 100


State 12

   17 class_declare: INTERFACE . IDENTIFIER COLON IDENTIFIER
   18              | INTERFACE . IDENTIFIER LP IDENTIFIER RP
   19              | INTERFACE . IDENTIFIER LP RP

    IDENTIFIER  shift, and go to state 112


State 13

   25 class_implementation: IMPLEMENTATION . IDENTIFIER
   26                     | IMPLEMENTATION . IDENTIFIER LP IDENTIFIER RP

    IDENTIFIER  shift, and go to state 113


State 14

  212 primary_expression: PROTOCOL . LP IDENTIFIER RP

    LP  shift, and go to state 114


State 15

   77 declare_left_attribute: NONNULL .

    $default  reduce using rule 77 (declare_left_attribute)


State 16

   78 declare_left_attribute: NULLABLE .

    $default  reduce using rule 78 (declare_left_attribute)


State 17

   74 declare_left_attribute: EXTERN .

    $default  reduce using rule 74 (declare_left_attribute)


State 18

   75 declare_left_attribute: STATIC .

    $default  reduce using rule 75 (declare_left_attribute)


State 19

   76 declare_left_attribute: CONST .

    $default  reduce using rule 76 (declare_left_attribute)


State 20

   79 declare_left_attribute: _STRONG .

    $default  reduce using rule 79 (declare_left_attribute)


State 21

   80 declare_left_attribute: _WEAK .

    $default  reduce using rule 80 (declare_left_attribute)


State 22

   81 declare_left_attribute: _BLOCK .

    $default  reduce using rule 81 (declare_left_attribute)


State 23

   82 declare_left_attribute: _BRIDGE .

    $default  reduce using rule 82 (declare_left_attribute)


State 24

   70 type_specified: IDENTIFIER .
  198 primary_expression: IDENTIFIER .

    CONST       reduce using rule 70 (type_specified)
    _NONNULL    reduce using rule 70 (type_specified)
    _NULLABLE   reduce using rule 70 (type_specified)
    IDENTIFIER  reduce using rule 70 (type_specified)
    LP          reduce using rule 70 (type_specified)
    LP          [reduce using rule 198 (primary_expression)]
    RP          reduce using rule 70 (type_specified)
    RP          [reduce using rule 198 (primary_expression)]
    LT          reduce using rule 70 (type_specified)
    LT          [reduce using rule 198 (primary_expression)]
    ASTERISK    reduce using rule 70 (type_specified)
    ASTERISK    [reduce using rule 198 (primary_expression)]
    $default    reduce using rule 198 (primary_expression)


State 25

  213 primary_expression: STRING_LITERAL .

    $default  reduce using rule 213 (primary_expression)


State 26

  189 unary_expression: LP . type_specified RP unary_expression
  205 primary_expression: LP . expression RP

    TILDE            shift, and go to state 2
    _typeof          shift, and go to state 10
    _sizeof          shift, and go to state 11
    PROTOCOL         shift, and go to state 14
    NONNULL          shift, and go to state 15
    NULLABLE         shift, and go to state 16
    EXTERN           shift, and go to state 17
    STATIC           shift, and go to state 18
    CONST            shift, and go to state 19
    _STRONG          shift, and go to state 20
    _WEAK            shift, and go to state 21
    _BLOCK           shift, and go to state 22
    _BRIDGE          shift, and go to state 23
    IDENTIFIER       shift, and go to state 24
    STRING_LITERAL   shift, and go to state 25
    LP               shift, and go to state 26
    LB               shift, and go to state 27
    AT               shift, and go to state 28
    NOT              shift, and go to state 30
    AND              shift, and go to state 31
    POWER            shift, and go to state 32
    SUB              shift, and go to state 33
    ASTERISK         shift, and go to state 34
    INCREMENT        shift, and go to state 35
    DECREMENT        shift, and go to state 36
    _self            shift, and go to state 37
    _super           shift, and go to state 38
    _nil             shift, and go to state 39
    _NULL            shift, and go to state 40
    _Class           shift, and go to state 41
    _id              shift, and go to state 42
    _void            shift, and go to state 43
    _BOOL            shift, and go to state 44
    _CHAR            shift, and go to state 45
    _SHORT           shift, and go to state 46
    _INT             shift, and go to state 47
    _LONG            shift, and go to state 48
    _LLONG           shift, and go to state 49
    _UCHAR           shift, and go to state 50
    _USHORT          shift, and go to state 51
    _UINT            shift, and go to state 52
    _ULONG           shift, and go to state 53
    _ULLONG          shift, and go to state 54
    _DOUBLE          shift, and go to state 55
    _FLOAT           shift, and go to state 56
    _instancetype    shift, and go to state 57
    INTETER_LITERAL  shift, and go to state 58
    DOUBLE_LITERAL   shift, and go to state 59
    SELECTOR         shift, and go to state 60

    type_specified             go to state 115
    declare_left_attribute     go to state 69
    block_type                 go to state 70
    objc_method_call           go to state 71
    block_implementation       go to state 72
    expression                 go to state 116
    ternary_expression         go to state 103
    logic_or_expression        go to state 84
    logic_and_expression       go to state 85
    bite_or_expression         go to state 86
    bite_xor_expression        go to state 87
    bite_and_expression        go to state 88
    equality_expression        go to state 89
    relational_expression      go to state 90
    bite_shift_expression      go to state 91
    additive_expression        go to state 92
    multiplication_expression  go to state 93
    unary_expression           go to state 94
    numerical_value_type       go to state 95
    primary_expression         go to state 100


State 27

  100 objc_method_call: LB . primary_expression objc_method_call_pramameters RB

    PROTOCOL         shift, and go to state 14
    IDENTIFIER       shift, and go to state 98
    STRING_LITERAL   shift, and go to state 25
    LP               shift, and go to state 117
    LB               shift, and go to state 27
    AT               shift, and go to state 28
    POWER            shift, and go to state 32
    _self            shift, and go to state 37
    _super           shift, and go to state 38
    _nil             shift, and go to state 39
    _NULL            shift, and go to state 40
    INTETER_LITERAL  shift, and go to state 58
    DOUBLE_LITERAL   shift, and go to state 59
    SELECTOR         shift, and go to state 60

    objc_method_call      go to state 71
    block_implementation  go to state 72
    numerical_value_type  go to state 95
    primary_expression    go to state 118


State 28

  206 primary_expression: AT . LC dict_entry RC
  207                   | AT . LB expression_list RB
  208                   | AT . LP expression RP
  209                   | AT . numerical_value_type
  210                   | AT . STRING_LITERAL

    STRING_LITERAL   shift, and go to state 119
    LP               shift, and go to state 120
    LB               shift, and go to state 121
    LC               shift, and go to state 122
    INTETER_LITERAL  shift, and go to state 58
    DOUBLE_LITERAL   shift, and go to state 59
